rough outline of social factors

--- a/LaTeX/intro.tex
+++ b/LaTeX/intro.tex
@@ -476,10 +476,69 @@ more beneficial~\cite{Zollman2007,OConnor2019e}.
 
 \subsection{Social factors in polarization}
 
-Sociologists have contributed to understanding and explaining extremism and
-polarization by studying the effect of different social network configurations,
-where social networks represent the structure of interpersonal relationships 
-that enable social interaction and influence~\cite{Milgram1967,Watts1998,Watts1999,Barabasi1999,BarabasiBook}.
+\begin{itemize}
+  \item 
+    Important/relevant social factors
+    \begin{itemize}
+      \item 
+        Unless we know someone or are in close proximity to someone, it is
+        unlikely we will interact with them. Thus, unlike molecules in an
+        ideal gas, we cannot in general assume that people in society are
+        ``well mixed'', i.e., we cannot assume 
+        that every person will interact with everyone else within some 
+        relevant timeframe.
+      \item
+        People tend to choose social interaction partners who 
+        are similar to themselves, known as \emph{homophily}. As homophily
+        increases among a population, this
+        increases the chance that individuals interact with similar others, 
+        and decreases the chance that individuals will act with dissimilar
+        others.
+      \item
+        The structure of social connections determines how long it takes, on average, for an opinion
+        or other information to percolate through a society as one person
+        influences another. The classic emprical study on this revealed the
+        first glimpse of the ``six degrees'' phenomenon, where, on average,
+        it appears anyone is related to anyone else in the world by only
+        six or so intermediaries. \citeA{Milgram1967} and \citeA{Travers1969}
+        sent\ldots
+      \item
+        Another social factor that affects social outcomes are power structures
+        that result in one person having a greater social influence than others.
+        This may be represented as having a greater number of relationships
+        with others, so that their opinions are more widely shared~\cite{French1956,Friedkin1986}.
+    \end{itemize}
+
+  \item
+    These various social factors are often represented by a social network.
+    \begin{itemize}
+      \item 
+        Basic concepts in social network theory
+        \begin{itemize}
+          \item 
+            Node
+          \item
+            Edge
+          \item
+            Weighted edges
+          \item
+            Temporal networks
+        \end{itemize}
+    \end{itemize}
+    
+\end{itemize}
+
+Variations in social network structure can lead to significantly different
+outcomes. For instance, in a classic model of cultural differentiation~\cite{Axelrod1997},
+it seemed at first that cultural homogeneity was impossible---there seemed to
+always be at least a few subcultures co-existing within a larger simulated
+society. However, when . Finally, when homophily was represented
+as the ability of individuals to sever ties with dissimilar others, cultural
+heterogeneity was again preserved as in the original study. In another series
+of studies, \citeA{Flache2011} and \citeA{Turner2018} found that small world
+networks bias societies to become more polarized over time, on average, 
+as long as the initial polarization is large enough. 
+
 
 \subsection{A combined model of social influence based on cognitive and social factors}
 
@@ -524,6 +583,8 @@ We represent
 
 \section{Emergent social phenomena}
 
+(MAKE IT ABOUT THE PHENOMENA FIRST, EXPLANATION OF IT SECOND)
+
 Emergent social phenomena are identified by finding patterns in some 
 individual-level behavior among a population~\cite{Blau1974,Schelling2006}.
 The behavior in this dissertation's case of opinion (or belief, attitude, etc.) 
@@ -540,11 +601,15 @@ which can result in emergent racial segregation~\cite{Schelling1971}; publishing
 articles of differing validity which leads to systemic scientific problems~\cite{Smaldino2019};
 or writing statements and documents online that together form a system of 
 cultural frames including harmful ethnic, gender, and racial biases and 
-stereotypes~\cite{Caliskan2017,Garg2018}. There are also emergent phenomena
+stereotypes~\cite{Caliskan2017,Garg2018}. 
+
+There are also emergent phenomena
 at smaller social scales, such as dyads and other small groups~\cite{Abney2014a}. 
 For example, dyads were found to synchronize with one another when in collaborative
 tasks, and ``asynchronize'' when in an adversarial 
 relationship~\cite{Abney2014,Ramirez-Aristizabal2018,Schloesser2019,Schneider2020,Abney2021}.
+
+
 
 \subsection{Collective violence metaphor usage on cable TV news}
 
